--- a/index.html
+++ b/index.html
@@ -155,12 +155,17 @@
 							</ul>
 						</div>
 						<div class="col-12 col-md-4 mb-4">
-							<img src="images/arco-sanitizante.png" class="arco">
-							<p class="claimer-image">
-								Contamos con una versión 
-								más economica,contactanos 
-								y pregunta por ella.
-							</p>
+							<div class="owl-carousel owl-theme arcos">
+								<div class="item">
+									<img src="images/arco-sanitizante.png" class="arco">
+								</div>
+								<div class="item pvc">
+									<img src="images/arco-pvc.png" class="arco">
+									<img src="images/rampa.svg" class="rampa">
+									<img src="images/aspersor.png" class="aspersor">
+								</div>
+							</div>
+							
 						</div>
 						<div class="col-12 col-md-4 align-self-center">
 							<p class="title-alt ">
@@ -170,7 +175,7 @@
 								<li>-Sanitización</li>
 								<li>-Desinfección 360º</li>
 								<li>-Desinfectante HOCI</li>
-								<li>-Sensor de movimiento o activación por botón.</li>
+								<li>-Activación por botón.</li>
 							</ul>
 						</div>
 					</div>
@@ -247,7 +252,7 @@
 					</div>
 					<div class="row mt-4">
 						<div class="col-12">
-							<div class="owl-carousel owl-theme">
+							<div class="owl-carousel owl-theme productos">
 							    <div class="item">
 							    	<img src="images/cubrebocas.png" class="">
 							    	<p class="titulo">
