--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 						<img src="images/background-contacto.jpg" class="w-100">
 						<div class="contacto-claimer">
 							<p>
-								Cotizaciones o más información 
+								Cotizaciones o más información:
 							</p>
 							<a class="btn btn-primary" href="mailto:contacto@ekiem.com.mx"> Contáctanos </a>
 						</div>
