--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 							<p>
 								Cotizaciones o más información:
 							</p>
-							<a class="btn btn-primary" href="mailto:contacto@ekiem.com.mx"> Contáctanos </a>
+							<a class="btn btn-primary" href="mailto:contacto@ekiem.com.mx"> CONTACTAR </a>
 						</div>
 					</div>
 				</div>
