--- a/index.html
+++ b/index.html
@@ -277,6 +277,24 @@
 							    		ACRÍLICOS DE PROTECCIÓN
 							    	</p>
 							    </div>
+							    <div class="item">
+							    	<img src="images/acrilico.png" class="">
+							    	<p class="titulo">
+							    		Producto 1
+							    	</p>
+							    </div>
+							    <div class="item">
+							    	<img src="images/acrilico.png" class="">
+							    	<p class="titulo">
+							    		Producto 2
+							    	</p>
+							    </div>
+							    <div class="item">
+							    	<img src="images/acrilico.png" class="">
+							    	<p class="titulo">
+							    		Producto 3
+							    	</p>
+							    </div>
 							</div>
 						</div>
 					</div>
