--- a/index.html
+++ b/index.html
@@ -278,21 +278,21 @@
 							    	</p>
 							    </div>
 							    <div class="item">
-							    	<img src="images/acrilico.png" class="">
+							    	<img src="images/dispensador-de-gel.png" class="">
 							    	<p class="titulo">
-							    		Producto 1
+							    		DISPENSADOR DE GEL
 							    	</p>
 							    </div>
 							    <div class="item">
-							    	<img src="images/acrilico.png" class="">
+							    	<img src="images/tapete-desinfectante.png" class="">
 							    	<p class="titulo">
-							    		Producto 2
+							    		TAPETE DESINFECTANTE
 							    	</p>
 							    </div>
 							    <div class="item">
-							    	<img src="images/acrilico.png" class="">
+							    	<img src="images/tapete-secado.png" class="">
 							    	<p class="titulo">
-							    		Producto 3
+							    		TAPETE SECADO
 							    	</p>
 							    </div>
 							</div>
